<resources>
    <string name="app_name">Teste 2</string>
    <string name="student_grades">STUDENT GRADES</string>
    <string name="aproved">Aproved</string>
    <string name="reproved">Reproved</string>
    <string name="register">Register</string>
    <string name="students">STUDENTS</string>
    <string name="name">Name</string>
    <string name="test_1">Test 1</string>
    <string name="test_2">Test 2</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="exam">EXAM</string>
    <string name="nota_1">Nota 1:</string>
    <string name="nota_2">Nota 2:</string>
    <string name="media">Media:</string>
    <string name="status">Status:</string>
    <string name="remover">Remover</string>
    <string name="update">Update</string>
</resources>