<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/tittle"
        android:layout_marginTop="25dp"
        android:textSize="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_grades"
        android:gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/home"

        />


    <Button
        android:id="@+id/btnAprov"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/aproved"
        android:layout_marginTop="90dp"
        android:background="@color/greenbtn"
        />

    <Button
        android:id="@+id/btnReprov"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/reproved"
        android:layout_marginTop="10dp"
        android:background="@color/redbtn"
        />

    <Button
        android:id="@+id/btnRegis"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        android:background="@color/bluebtn"
        />


</LinearLayout>





